- Moved Single Recipe View. - Enabled scrolling for single recipe view. - Fixed alignment issues of <div>'s.

--- a/css/flex.css
+++ b/css/flex.css
@@ -179,8 +179,12 @@ h4 {
   overflow: scroll;
 }
 
+#timeline-header {
+  width: 50px;
+}
+
 #spacer {
-  width: 197px;
+  width: 20%;
   height: 10px;
 }
 
