--- a/css/modal.css
+++ b/css/modal.css
@@ -84,7 +84,6 @@ p {
   z-index: 11;
   transform: translate(0, -500%);
   transition: transform 0.75s ease-in;
-  overflow: auto;
   margin: auto;
   position: absolute;
   top: 0; left: 0; bottom: 0; right: 0;
@@ -92,7 +91,9 @@ p {
 
 .modal-body {
   padding: 20px;
+  overflow: scroll;
 }
+
 .modal-header,
 .modal-footer {
   padding: 10px 20px;
@@ -110,10 +111,22 @@ p {
     font-size: 30px;
     padding-top: 10px;
     padding-left: 40px;
+    position: relative;
 }
 .modal-header h2 {
     font-size: 20px;
 }
+
+.modal-header a {
+  float: right;
+  margin-top: 6px;
+  margin-right: 15px;
+}
+
+.modal-header div {
+  display: inline-block;
+}
+
 .modal-footer {
   text-align: right;
 }
@@ -125,14 +138,17 @@ p {
 .modal-recipe-container {
     text-align: left;
     width: 100%;
+    height: auto;
 }
+
 .modal-ingredients {
     float: left;
-    width: 30%;
+    width: 300px;
     padding: 0px;
     border-width: 1px;
     border-color: #E6E6E6;
-    margin: 10px;
+    margin: 0px 10px;
+    height: auto;
 }
 
 .modal-ingredients ul {
@@ -146,7 +162,7 @@ p {
 
 .modal-ingredients img {
     height: 240px;
-    width: 380px;
+    width: 300px;
 }
 
 #single-recipe-directions li {
@@ -157,11 +173,19 @@ p {
     float: left;
     width: 55%;
     padding: 0px;
-    margin: 20px;
+    margin: 0px 20px 20px 20px;
 }
 
+.modal-directions h2 {
+  margin-top: 0px;
+}
 .modal-directions ol {
     padding-left: 21px;
+}
+
+#modal-scroller {
+  overflow: auto;
+  height: 550px;
 }
 
 /*ADDED TO STOP SCROLLING TO TOP*/
